@@ -1,5 +1,6 @@
 * 2.0.0 (201X-XX-XX)
 
+ * improved the performance of the filesystem loader
  * removed features that were deprecated in 1.x
 
 * 1.14.0 (2013-XX-XX)
